Added apps drawer list and fetch apps from database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     //
     <string name="apps">Apps</string>
     <string name="widgets">Widgets</string>
+    <string name="search_hint">Search</string>
 
 </resources>
